--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
 	
 </head>
 <body>
-			<nav>
-				<a href="#" class="toggle">&#9776;</a>
+				<nav>
+					<a href="index.html" id="logo"><img src="brandlogo.png" id="brandlogo" alt="brandlogo"></a>
+					
+					<a href="#" class="toggle" id="menu-icon">&#9776;</a>
+				 
 				<div class="nav-right">
 					<a href="#">HOME</a>
 					<a href="#">ABOUT ME</a>
